//
//proto3proto2
//protobuf
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//ï¼Œprotocgo
package go_protos;

option go_package = "./go_protos";

message ChainInfo {
	bytes    StartBlockHash        =1;  //hash
	uint64   HightBlock            =2;  //
}
